feat: update startup flags